--- a/reqstat.html
+++ b/reqstat.html
@@ -452,15 +452,15 @@
         <tbody>
             
             <tr>
-                <td>3</td>
-                <td>4-6</td>
-                <td>AutoCAD [x3], MatLab [x3], Solidworks [x3], ETAP [x3]</td>
-                <td>8 October - 8 January</td>
-                <td>Approved</td>
-                <td>Sorry</td>
-                <td>444 USD</td>
-                <td>126614</td>
-                <td style="color: forestgreen;"><b>PAID</b></td>
+                <td>4</td>
+                <td>1</td>
+                <td>TBA</td>
+                <td>TBA</td>
+                <td>TBA</td>
+                <td>TBA</td>
+                <td>TBA</td>
+                <td>TBA</td>
+                <td style="color: forestgreen;"><b>-</b></td>
             </tr>
             <!--
             <tr>
