--- a/crd.html
+++ b/crd.html
@@ -495,6 +495,9 @@ select:focus {
                     case "J":
                     priceDisplay.innerText = "EXPIRED";
                     break;
+                    case "K":
+                    priceDisplay.innerText = "81,500.00 BDT PENDING";
+                    break;
                 default:
                     priceDisplay.innerText = "";
                     break;
@@ -657,6 +660,7 @@ select:focus {
         <option value="H">126612</option>
         <option value="I">126613</option>
         <option value="J">126614</option>
+        <option value="K">126615</option>
     </select>
 
     <p id="price"></p>
