--- a/oc.html
+++ b/oc.html
@@ -639,6 +639,7 @@ select:focus {
         <option value="H">126612</option>
         <option value="I">126613</option>
         <option value="J">126614</option>
+        <option value="K">126615</option>
     </select>
                         
                         <h3 style="padding-top: 10px;">Payment Status:</h3>
@@ -686,6 +687,9 @@ select:focus {
                     break;
                     case "J":
                     priceDisplay.innerText = "444.00 USD PAID";
+                    break;
+                    case "K":
+                    priceDisplay.innerText = "81,500.00 BDT PENDING";
                     break;
                 default:
                     priceDisplay.innerText = "";
