--- a/crd.html
+++ b/crd.html
@@ -496,7 +496,10 @@ select:focus {
                     priceDisplay.innerText = "EXPIRED";
                     break;
                     case "K":
-                    priceDisplay.innerText = "81,500.00 BDT PENDING";
+                    priceDisplay.innerText = "EXPIRED";
+                    break;
+                    case "L":
+                    priceDisplay.innerText = "EXPIRED";
                     break;
                 default:
                     priceDisplay.innerText = "";
@@ -661,6 +664,7 @@ select:focus {
         <option value="I">126613</option>
         <option value="J">126614</option>
         <option value="K">126615</option>
+        <option value="L">126616</option>
     </select>
 
     <p id="price"></p>
