--- a/fac.html
+++ b/fac.html
@@ -602,8 +602,8 @@
                             <td>4</td>
                             <td>1</td>
                             <td>January 2025</td>
-                            <td>TBA</td>
-                            <td>TBA</td>
+                            <td>Closed</td>
+                            <td>Closed</td>
           
                         </tr>
                         
