--- a/oc.html
+++ b/oc.html
@@ -640,6 +640,7 @@ select:focus {
         <option value="I">126613</option>
         <option value="J">126614</option>
         <option value="K">126615</option>
+        <option value="L">126616</option>
     </select>
                         
                         <h3 style="padding-top: 10px;">Payment Status:</h3>
@@ -689,7 +690,10 @@ select:focus {
                     priceDisplay.innerText = "444.00 USD PAID";
                     break;
                     case "K":
-                    priceDisplay.innerText = "81,500.00 BDT PENDING";
+                    priceDisplay.innerText = "81,500.00 BDT PAID";
+                    break;
+                    case "L":
+                    priceDisplay.innerText = "218.00 USD PAID";
                     break;
                 default:
                     priceDisplay.innerText = "";
