--- a/crd.html
+++ b/crd.html
@@ -466,40 +466,7 @@ select:focus {
             // Set the price based on the selected product
             switch (product) {
                 case "A":
-                    priceDisplay.innerText = "EXPIRED";
-                    break;
-                case "B":
-                    priceDisplay.innerText = "EXPIRED";
-                    break;
-                case "C":
-                    priceDisplay.innerText = "EXPIRED";
-                    break;
-                case "D":
-                    priceDisplay.innerText = "EXPIRED";
-                    break;
-                case "E":
-                    priceDisplay.innerText = "EXPIRED";
-                    break;
-                case "F":
-                    priceDisplay.innerText = "EXPIRED";
-                    break;
-                case "G":
-                    priceDisplay.innerText = "EXPIRED";
-                    break;
-                case "H":
-                    priceDisplay.innerText = "EXPIRED";
-                    break;
-                    case "I":
-                    priceDisplay.innerText = "EXPIRED";
-                    break;
-                    case "J":
-                    priceDisplay.innerText = "EXPIRED";
-                    break;
-                    case "K":
-                    priceDisplay.innerText = "EXPIRED";
-                    break;
-                    case "L":
-                    priceDisplay.innerText = "EXPIRED";
+                    priceDisplay.innerText = "$164.00 USD PENDING";
                     break;
                 default:
                     priceDisplay.innerText = "";
@@ -653,18 +620,7 @@ select:focus {
       <label for="product">Transaction ID:</label>
     <select id="product" onchange="showPrice()">
         <option value="">-- Select One --</option>
-        <option value="A">126601</option>
-        <option value="B">126602</option>
-        <option value="C">126606</option>
-        <option value="D">126607</option>
-        <option value="E">126609</option>
-        <option value="F">126610</option>
-        <option value="G">126611</option>
-        <option value="H">126612</option>
-        <option value="I">126613</option>
-        <option value="J">126614</option>
-        <option value="K">126615</option>
-        <option value="L">126616</option>
+        <option value="A">126617</option>
     </select>
 
     <p id="price"></p>
