--- a/paymentid.html
+++ b/paymentid.html
@@ -606,6 +606,15 @@
                 </li>
                 <li>
                     <label class="custom-checkbox">
+                        <input type="checkbox" class="item-checkbox" data-price="250.00" data-name="AutoCAD-EEE">
+                        <span class="checkmark"></span>
+                        <strong>AutoCAD</strong> - $250.00
+                        <br> 
+                    </label>
+                    <input type="number" class="quantity" value="3" min="1">
+                </li>
+                <li>
+                    <label class="custom-checkbox">
                         <input type="checkbox" class="item-checkbox" data-price="100.00" data-name="RUST">
                         <span class="checkmark"></span>
                         <strong>AutoDesk</strong> - $100.00
