--- a/reqstat.html
+++ b/reqstat.html
@@ -453,14 +453,14 @@
             
             <tr>
                 <td>4</td>
-                <td>1</td>
-                <td>TBA</td>
-                <td>TBA</td>
-                <td>TBA</td>
-                <td>TBA</td>
-                <td>TBA</td>
-                <td>TBA</td>
-                <td style="color: forestgreen;"><b>-</b></td>
+                <td>2</td>
+                <td>ETAP (x1), Simulink (x1), Solidworks (x1), RUST (x1)</td>
+                <td>01-02-2025 to 28-02-2025</td>
+                <td>Approved</td>
+                <td>N/A</td>
+                <td>$164.00 USD</td>
+                <td>126617</td>
+                <td style="color: red;"><b>PENDING</b></td>
             </tr>
             <!--
             <tr>
