--- a/dashboard.html
+++ b/dashboard.html
@@ -420,7 +420,9 @@
       <ul>
       
           <li>NSU is opting in for so anticipated Tri-semester system from Spring-2025 <br>
-          <li>Due unavoidable circumstances, class and lab schedules may occur irregular<br>
+          <li>Students now have to manually purchase digital goods and licenses from NSU Student App Store<br>
+          <li>Installment payment has been discontinued from 1 January 2025<br>
+          <li>Due to unavoidable circumstances, class and lab schedules may occur irregular<br>
           <li>Students are advised to ensure any outstanding procurement process through FAC<br>
           <li style="color: orange">Students can now avail flat currency exchange rate of 120 BDT to 1 USD from their pre-credited account balance from NSU accounts<br>
           <li style="color: red">Students are advised to always carry their student ID AKA RFID with them under the current circumstances<br>
