--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ input[type="password"]:focus {
     
 
   <div class="container">
+      <h2 style="color: dimgray; text-align: center;">Welcome to Student Portal of NSU</h2>
     <h1>Student Login</h1>
     <form id="login-form">
       <input type="text" placeholder="Student ID" name="username" required>
