--- a/oc.html
+++ b/oc.html
@@ -649,7 +649,7 @@ select:focus {
             // Set the price based on the selected product
             switch (product) {
                 case "A":
-                    priceDisplay.innerText = "$164.00 USD PENDING";
+                    priceDisplay.innerText = "$164.00 USD PAID";
                     break;
                 default:
                     priceDisplay.innerText = "";
