Major update fix
-resolved email panel log in, log out link issue of last major update

--- a/dashboard.html
+++ b/dashboard.html
@@ -455,7 +455,7 @@
     
     
     <section style="display: flex; flex-direction: column; align-items: center;">
-    <a href="/mail.html" style="text-decoration-line: none; display: flex; flex-direction: column; align-items: center;">
+    <a href="mail.html" style="text-decoration-line: none; display: flex; flex-direction: column; align-items: center;">
         <img src="https://img.icons8.com/?size=100&id=124193&format=png&color=000000" alt="Email Icon" style="height: 40px; width: 40px;">
         <span>Login to student mail box</span>
     </a>
