--- a/mail.html
+++ b/mail.html
@@ -94,7 +94,7 @@
         <h1>North South University Student Mail Box</h1>
     </header>
     <div class="sidebar">
-        <a href="/dashboard.html">Log out to Home</a>
+        <a href="dashboard.html">Log out to Home</a>
         <a href="mail.html" style="background-color: white; color: black;">Inbox</a>
         <a href="outbox.html">Sent</a>
         <a href="drafts.html">Drafts</a>
