--- a/account.html
+++ b/account.html
@@ -379,11 +379,11 @@
         </tr>
         <tr>
             <th>Current Dues<br></th>
-            <th>0.00 /-<br></th>
+            <th>$284.00 USD<br></th>
         </tr>
         <tr>
             <th>Payable Balance<br></th>
-            <th>0.00 /-<br></th>
+            <th>$284.00 USD<br></th>
         </tr>
         <tr>
             <td>Student ID<br></td>
@@ -395,7 +395,7 @@
         </tr>
         <tr>
             <td>Linked Card<br></td>
-            <td>41************48 (Visa Dual Currency Debit Card)<br></td>
+            <td>Currently no card found<br></td>
         </tr>
        
     </thead>
