--- a/crd.html
+++ b/crd.html
@@ -393,7 +393,7 @@ select:focus {
             // Set the price based on the selected product
             switch (product) {
                 case "A":
-                    priceDisplay.innerText = "$250.00 USD PAID";
+                    priceDisplay.innerText = "$284.00 USD";
                     break;
                 default:
                     priceDisplay.innerText = "";
@@ -511,7 +511,7 @@ select:focus {
       <label for="product">Transaction ID:</label>
     <select id="product" onchange="showPrice()">
         <option value="">-- Select One --</option>
-        <option value="A">126618</option>
+        <option value="A">126622</option>
     </select>
 
     <p id="price"></p>
