--- a/dashboard.html
+++ b/dashboard.html
@@ -399,7 +399,7 @@
       <p>Birth Date: 21 June 2003</p>
       <p>Department: EEE</p>
       <p>Rank: <b style="color: darkgreen">Junior Year</b> </p>
-      <p>Credit Passed: <b style="color: brown">34.00</b></p>
+      <p>Credit Passed: <b style="color: brown">40.00</b></p>
         
       <!-- Add more personal information here -->
     </div>
@@ -414,8 +414,8 @@
             <li><b>EEE241</b></li>
             <li><b>EEE241 L</b></li>
             <li><b>CSE101</b></li>
-            <li><b>EEE102</b></li>
-            <li><b>EEE154</b></li>
+            <li><b>BEN205</b></li>
+            <li><b>HIS103</b></li>
         </ol>
         
       <!-- Add your academic results content here -->
