--- a/dashboard.html
+++ b/dashboard.html
@@ -430,8 +430,7 @@
       </h3>
       <ul>
       
-          <li style="color: red;">Due to Holy Eid-ul-Fitr all classes will remain closed from 30th March 2025, Sunday till 2nd April 2025, Wednesday. <br>
-          <li style="color: red;">Due to Holy Shab-e-qadr all classes will remain closed on 28th March, Friday.<br>
+          <li style="color: red;">Due to Eid-ul-Adha all classes will remain closed from 5th June 2025, Thursday to 8th June 2025, Sunday. All classes and exams will continue as regular from 9th June 2025, Monday.<br>
           <li>NSU is opting in for so anticipated Tri-semester system from Spring-2025 <br>
           <li>Students now have to manually purchase digital goods and licenses from NSU Student App Store<br>
           <li>Installment payment has been discontinued from 1 January 2025<br>
@@ -444,10 +443,10 @@
       <!-- Add your academic results content here -->
         <h3 class="blink_me" style="color: red;">Directed Notice</h3>
         <ul style="color: darkred;">
-            <li>Please get your lab reports verified. Visit Central Library Hall on 29th March 2025, Saturday from 3pm to 4pm respectively.</li>
-            <li>EEE154 Lab report evaluation on 03-04-2025</li>
-            <li>EEE241 Lab report evaluation on 05-04-2025</li>
-            <li>CSE101 Lab report evaluation on 07-04-2025</li>
+            <li>HIS103 Quiz-1 scheduled on 9th June 2025.</li>
+            <li>BEN205 Quiz-1 scheduled on 11th June 2025.</li>
+            <li>EEE241 Quiz-1 scheduled on 12th June 2025.</li>
+            <li>EEE241 L Quiz-1 scheduled on 10th June 2025.</li>
         </ul>
     </div>
   </section>
