--- a/account.html
+++ b/account.html
@@ -375,15 +375,15 @@
     <thead>
         <tr>
             <th>Current Balance<br></th>
-            <th>0.00/- (Credit)<br></th>
+            <th>BDT 0.00 /- (Credit)<br></th>
         </tr>
         <tr>
             <th>Current Dues<br></th>
-            <th>$284.00 USD<br></th>
+            <th>BDT 0.00 /-<br></th>
         </tr>
         <tr>
             <th>Payable Balance<br></th>
-            <th>$284.00 USD<br></th>
+            <th>BDT 0.00 /-<br></th>
         </tr>
         <tr>
             <td>Student ID<br></td>
