--- a/crd.html
+++ b/crd.html
@@ -393,7 +393,7 @@ select:focus {
             // Set the price based on the selected product
             switch (product) {
                 case "A":
-                    priceDisplay.innerText = "$284.00 USD";
+                    priceDisplay.innerText = "$284.00 USD PAID";
                     break;
                 default:
                     priceDisplay.innerText = "";
