--- a/parent-dash.html
+++ b/parent-dash.html
@@ -179,12 +179,12 @@
         <h2>Account Summary</h2>
         <div class="info">
             <div class="section">
-                <span class="label">FAC Fees:</span> <span id="tuition">$ 284.00 USD</span>
-                <br><span>Due Date: May 27, 2025</span>
+                <span class="label">Dues:</span> <span id="tuition">BDT 0.00 /-</span>
+                <br><span>Due Date: N/A</span>
             </div>
             
             <div class="section-totaldues">
-                <span class="label">Total Due Amount:</span> <span id="total-dues">$ 284.00 USD</span>
+                <span class="label">Total Due Amount:</span> <span id="total-dues">BDT 0.00 /-</span>
             </div>
         </div>
 
