--- a/parent-dash.html
+++ b/parent-dash.html
@@ -179,12 +179,17 @@
         <h2>Account Summary</h2>
         <div class="info">
             <div class="section">
-                <span class="label">Dues:</span> <span id="tuition">BDT 0.00 /-</span>
+                <span class="label" style="color: orangered; background-color:aquamarine; padding-left: 30px; padding-right: 30px;">PID-126623</span><br>
+                <span class="label">Dues:</span> <span id="tuition">$ 219.00 USD</span>
+                <br><span>Deadline: 26 June 2025</span>
+            </div>
+            <div class="section">
+                <span class="label">Dues:</span> <span id="tuition">BDT 0.00/-</span>
                 <br><span>Due Date: N/A</span>
             </div>
             
             <div class="section-totaldues">
-                <span class="label">Total Due Amount:</span> <span id="total-dues">BDT 0.00 /-</span>
+                <span class="label">Total Due Amount:</span> <span id="total-dues">BDT 0.00/- | $ 219.00 USD</span>
             </div>
         </div>
 
