--- a/parent-dash.html
+++ b/parent-dash.html
@@ -148,10 +148,10 @@
             <div class="section">
                 <span class="label">Emergency Contact:</span> <br>
                 <br>
-                <span id="enrollment-year">Cell: +880 1301753609</span> <br>
-                <span id="enrollment-year">Relation: Mother</span> <br>
-                <span id="enrollment-year">Blood Group: B+(ve)</span> <br>
-                <span id="enrollment-year">Conditional Awareness: severe allergic rhinitis</span>
+                <span id="cell">Cell: +880 1301753609</span> <br>
+                <span id="relation">Relation: Mother</span> <br>
+                <span id="blood-group">Blood Group: B+(ve)</span> <br>
+                <span id="conditional-awarness">Conditional Awareness: severe allergic rhinitis</span>
             </div>
         </div>
 
@@ -161,15 +161,15 @@
                 <span class="label">Student SGPA:</span> <span id="sgpa">4.00 Spring 2025</span>
             </div>
             <div class="section-cgpa">
-                <span class="label">Student CGPA:</span> <span id="cgpa">3.82</span>
+                <span class="label">Student CGPA:</span> <span id="cgpa">3.82 (Excellent)</span>
             </div>
             <div class="section">
-                <span class="label">NSU CGPA Grading:</span> <br> <br> <span id="credits">3.01-4.00 First Class (Excellent)</span> <br>
+                <span class="label">NSU CGPA Grading:</span> <br> <br> <span id="credit-class-excellent">3.01-4.00 First Class (Excellent)</span> <br>
                 <br>
-                <span id="credits">2.5-3.00 Second Class (Good)</span> <br>
+                <span id="credit-class-good">2.5-3.00 Second Class (Good)</span> <br>
                 <br>
-                <span id="credits">2.00-2.49 Third Class (Average)</span> <br> <br>
-                <span id="credits">'>1.99 Poor</span>
+                <span id="credit-class-average">2.00-2.49 Third Class (Average)</span> <br> <br>
+                <span id="credit-class-poor">&gt;1.99 Poor</span>
             </div>
             <div class="section">
                 <span class="label">Completed Credits:</span> <span id="credits">40 (55 with uncountable credits)</span>
@@ -179,17 +179,13 @@
         <h2>Account Summary</h2>
         <div class="info">
             <div class="section">
-                <span class="label" style="color: orangered; background-color:aquamarine; padding-left: 30px; padding-right: 30px;">PID-126623</span><br>
-                <span class="label">Dues:</span> <span id="tuition">$ 219.00 USD</span>
-                <br><span>Deadline: 26 June 2025</span>
-            </div>
-            <div class="section">
+                <!--<span class="label" style="color: orangered; background-color:aquamarine; padding-left: 30px; padding-right: 30px;">PID-126623</span><br>-->
                 <span class="label">Dues:</span> <span id="tuition">BDT 0.00/-</span>
-                <br><span>Due Date: N/A</span>
+                <br><span>Deadline: N/A</span>
             </div>
             
             <div class="section-totaldues">
-                <span class="label">Total Due Amount:</span> <span id="total-dues">BDT 0.00/- | $ 219.00 USD</span>
+                <span class="label">Total Due Amount:</span> <span id="total-dues">BDT 0.00/-</span>
             </div>
         </div>
 
