--- a/account.html
+++ b/account.html
@@ -379,11 +379,11 @@
         </tr>
         <tr>
             <th>Current Dues<br></th>
-            <th>BDT 0.00 /- | $ 219.00 USD<br></th>
+            <th>BDT 0.00 /-<br></th>
         </tr>
         <tr>
             <th>Payable Balance<br></th>
-            <th>BDT 0.00 /- | $ 219.00 USD<br></th>
+            <th>BDT 0.00 /-<br></th>
         </tr>
         <tr>
             <td>Student ID<br></td>
