--- a/parent-dash.html
+++ b/parent-dash.html
@@ -180,12 +180,12 @@
         <div class="info">
             <div class="section">
                 <!--<span class="label" style="color: orangered; background-color:aquamarine; padding-left: 30px; padding-right: 30px;">PID-126623</span><br>-->
-                <span class="label">Dues:</span> <span id="tuition">BDT 24,057.00/-</span>
-                <br><span>Deadline: 27 July 2025</span>
+                <span class="label">Dues:</span> <span id="tuition">BDT 0.00/-</span>
+                <br><span>Deadline: N/A</span>
             </div>
             
             <div class="section-totaldues">
-                <span class="label">Total Due Amount:</span> <span id="total-dues">BDT 24,057.00/-</span>
+                <span class="label">Total Due Amount:</span> <span id="total-dues">BDT 0.00/-</span>
             </div>
         </div>
 
