--- a/parent-dash.html
+++ b/parent-dash.html
@@ -158,10 +158,10 @@
         <h2>Academic Information</h2>
         <div class="info">
             <div class="section-sgpa">
-                <span class="label">Student SGPA:</span> <span id="sgpa">4.00 Spring 2025</span>
+                <span class="label">Student SGPA:</span> <span id="sgpa">2.77 Summer 2025</span>
             </div>
             <div class="section-cgpa">
-                <span class="label">Student CGPA:</span> <span id="cgpa">3.82 (Excellent)</span>
+                <span class="label">Student CGPA:</span> <span id="cgpa">3.58 (Excellent)</span>
             </div>
             <div class="section">
                 <span class="label">NSU CGPA Grading:</span> <br> <br> <span id="credit-class-excellent">3.01-4.00 First Class (Excellent)</span> <br>
@@ -179,13 +179,13 @@
         <h2>Account Summary</h2>
         <div class="info">
             <div class="section">
-                <!--<span class="label" style="color: orangered; background-color:aquamarine; padding-left: 30px; padding-right: 30px;">PID-126623</span><br>-->
-                <span class="label">Dues:</span> <span id="tuition">BDT 0.00/-</span>
-                <br><span>Deadline: N/A</span>
+                <span class="label" style="color: orangered; background-color:aquamarine; padding-left: 30px; padding-right: 30px;">PID-126627</span><br>
+                <span class="label">Dues:</span> <span id="tuition">BDT 15,494.00/-</span>
+                <br><span>Deadline: 28 September 2025</span>
             </div>
             
             <div class="section-totaldues">
-                <span class="label">Total Due Amount:</span> <span id="total-dues">BDT 0.00/-</span>
+                <span class="label">Total Due Amount:</span> <span id="total-dues">BDT 15,494.00/-</span>
             </div>
         </div>
 
