--- a/fac.html
+++ b/fac.html
@@ -551,7 +551,7 @@
                             <td>6</td>
                             <td>4</td>
                             <td>December 2025</td>
-                            <td>Open</td>
+                            <td>Closed</td>
                             <td>27 November 2025</td>
           
                         </tr>
