--- a/oc.html
+++ b/oc.html
@@ -541,7 +541,7 @@ select:focus {
             // Set the price based on the selected product
             switch (product) {
                 case "A":
-                    priceDisplay.innerText = "$200.00 USD";
+                    priceDisplay.innerText = "$200.00 USD PAID";
                     break;
                 default:
                     priceDisplay.innerText = "";
