--- a/parent-dash.html
+++ b/parent-dash.html
@@ -242,13 +242,13 @@
         <h2>Account Summary</h2>
         <div class="info">
             <div class="section">
-                <span class="label" style="color: orangered; background-color:aquamarine; padding-left: 30px; padding-right: 30px;">PID- N/A</span><br>
-                <span class="label">Dues:</span> <span id="tuition">BDT 0.00/-</span>
-                <br><span>Deadline: N/A</span>
+                <span class="label" style="color: orangered; background-color:aquamarine; padding-left: 30px; padding-right: 30px;">PID- 126630</span><br>
+                <span class="label">Dues:</span> <span id="tuition">BDT 1,26,000.00/-</span>
+                <br><span>Deadline: 25 December 2025</span>
             </div>
             
             <div class="section-totaldues">
-                <span class="label">Total Due Amount:</span> <span id="total-dues">BDT 0.00/-</span>
+                <span class="label">Total Due Amount:</span> <span id="total-dues">BDT 1,26,000.00/-</span>
             </div>
         </div>
 
