--- a/crd.html
+++ b/crd.html
@@ -393,7 +393,7 @@ select:focus {
             // Set the price based on the selected product
             switch (product) {
                 case "A":
-                    priceDisplay.innerText = "$200.00 USD PAID";
+                    priceDisplay.innerText = "$355.00 USD";
                     break;
                 default:
                     priceDisplay.innerText = "";
@@ -511,7 +511,7 @@ select:focus {
       <label for="product">Transaction ID:</label>
     <select id="product" onchange="showPrice()">
         <option value="">-- Select One --</option>
-        <option value="A">126629</option>
+        <option value="A">126631</option>
     </select>
 
     <p id="price"></p>
