--- a/parent-dash.html
+++ b/parent-dash.html
@@ -221,10 +221,10 @@
         <h2>Academic Information</h2>
         <div class="info">
             <div class="section-sgpa">
-                <span class="label">Student SGPA:</span> <span id="sgpa">2.77 Summer 2025</span>
+                <span class="label">Student SGPA:</span> <span id="sgpa">2.7 (B-) Fall 2025</span>
             </div>
             <div class="section-cgpa">
-                <span class="label">Student CGPA:</span> <span id="cgpa">3.58 (Excellent)</span>
+                <span class="label">Student CGPA:</span> <span id="cgpa">3.58 (Excellent)</span><!--Need to calculate according to forged fall 25 result-->
             </div>
             <div class="section">
                 <span class="label">NSU CGPA Grading:</span> <br> <br> <span id="credit-class-excellent">3.01-4.00 First Class (Excellent)</span> <br>
@@ -232,23 +232,23 @@
                 <span id="credit-class-good">2.5-3.00 Second Class (Good)</span> <br>
                 <br>
                 <span id="credit-class-average">2.00-2.49 Third Class (Average)</span> <br> <br>
-                <span id="credit-class-poor">&gt;1.99 Poor</span>
+                <span id="credit-class-poor">&lt;1.99 Poor</span>
             </div>
             <div class="section">
-                <span class="label">Completed Credits:</span> <span id="credits">40 (55 with uncountable credits)</span>
+                <span class="label">Completed Credits:</span> <span id="credits">46 (55 including uncountable(non-credits) credits)</span>
             </div>
         </div>
 
         <h2>Account Summary</h2>
         <div class="info">
             <div class="section">
-                <span class="label" style="color: orangered; background-color:aquamarine; padding-left: 30px; padding-right: 30px;">PID- 126631</span><br>
-                <span class="label">Dues:</span> <span id="tuition">BDT 43,310.00/-</span>
-                <br><span>Deadline: 24 December 2025</span>
+                <span class="label" style="color: orangered; background-color:aquamarine; padding-left: 30px; padding-right: 30px;">PID- N/A</span><br>
+                <span class="label">Dues:</span> <span id="tuition">BDT 0.00/-</span>
+                <br><span>Deadline: -</span>
             </div>
             
             <div class="section-totaldues">
-                <span class="label">Total Due Amount:</span> <span id="total-dues">BDT 43,310.00/-</span>
+                <span class="label">Total Due Amount:</span> <span id="total-dues">BDT 0.00/-</span>
             </div>
         </div>
 
